@@ -12,6 +12,9 @@ What's New in Python 2.7 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #5787: object.__getattribute__(some_type, "__bases__") segfaulted on
+  some builtin types.
+
 - Issue #1869: fix a couple of minor round() issues.  round(5e15+1)
     was giving 5e15+2; round(-0.0) was losing the sign of the zero.
 
